[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
build                                   = "build.rs"
categories                              = ["external-ffi-bindings"]
description                             = "Low-level bindings for the LibYAML library"
documentation                           = "https://docs.rs/libyaml-sys"
edition                                 = "2018"
homepage                                = "https://github.com/fatemender/libyaml-sys"
keywords                                = ["ffi", "libyaml", "yaml"]
license                                 = "MIT"
name                                    = "libyaml-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/libyaml-sys"
version                                 = "0.1.0"

[dependencies]
libc                                    = "0.2"
